2012-03-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-install.in: Unify "option requires an argument" message
	with similar messages in other files.
	* util/grub-mkconfig.in: Likewise.

2012-03-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-set-default.in: Replace printf with gettext_printf (the
	string in in question is already translated from grub-reboot)

2012-03-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Bump up the version to beta1.

2012-03-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/linux.c (allocate_pages): Fix handling of the
	case when min_align = 0.

2012-03-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/charset.c (bidi_line_wrap): Fix a spurious warning
	and fix a case when line_start overflows.

2012-03-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-reboot.in (usage): Mention id posibility.
	* util/grub-set-default.in (usage): Likewise.

2012-03-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/misc.h (ALIGN_UP_OVERHEAD): New define.
	* grub-core/loader/i386/linux.c (grub_cmd_initrd): Align initrds at 4.
	* grub-core/loader/i386/pc/linux.c (grub_cmd_initrd): Likewise.
	* grub-core/loader/ia64/efi/linux.c (grub_cmd_initrd): Likewise.
	* grub-core/loader/mips/linux.c (grub_cmd_initrd): Likewise.
	* grub-core/loader/powerpc/ieee1275/linux.c (grub_cmd_initrd): Likewise.
	* grub-core/loader/sparc64/ieee1275/linux.c (grub_cmd_initrd): Likewise.

2012-03-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/menuentry.c (options): Remove
	GRUB_ARG_OPTION_REPEATABLE.
	Reported by: Andreas Vogel

2012-03-04  Andreas Vogel <Andreas.Vogel@anvo-it.de>

	* grub-core/normal/main.c (grub_normal_free_menu): Fix memory leak.

2012-03-04  Hideki EIRAKU <hdk1983@gmail.com>

	* grub-core/normal/menu_entry.c (kill_line): Fix a crash and off-by-one
	error.

2012-03-04  Vladimir Serbinenko  <phcoder@gmail.com>
